# simple-tuner

./: .gitignore  Makefile  README.md  SimpleTuner.jucer
.github/workflows/: ci.yml
cmake/: clang-format.cmake  clang-tidy.cmake  complexity.cmake  cppcheck.cmake  sanitizers.cmake  sloccount.cmake
docs/: IMPLEMENTATION_PLAN.md  UI_UX_GUIDE.md
docs/requirements/: SOFTWARE_REQUIREMENTS_SPECIFICATION.md  TEST_PLAN.md  USE_CASE_DOCUMENTATION.md  VISION_AND_SCOPE_DOCUMENT.md
include/simple_tuner/interfaces/: IPermissions.h
include/simple_tuner/platform/: PlatformFactory.h
include/simple_tuner/platform/android/: AndroidConfigStorage.h  AndroidPermissions.h
include/simple_tuner/platform/common/: ConfigStorageWrapper.h
include/simple_tuner/platform/desktop/: MockPermissions.h
include/simple_tuner/platform/ios/: iOSConfigStorage.h  (+1 more)
include/simple_tuner/ui/: AlertHelpers.h  MainComponent.h  ModeSelector.h  NoteDisplayComponent.h  StatusIndicatorComponent.h  TuningMeterComponent.h  UIConstants.h
scripts/: clang-tidy.sh  format.sh
src/: CMakeLists.txt  Main.cpp
src/platform/android/: AndroidConfigStorage.cpp  AndroidPermissions.cpp
src/platform/common/: PlatformFactory.cpp
src/platform/desktop/: MockPermissions.cpp
src/platform/ios/: .clang-format  iOSConfigStorage.mm  iOSPermissions.mm
src/platform/mobile/: AudioManager.cpp  JUCEAudioInput.cpp  JUCEAudioOutput.cpp
src/ui/: MainComponent.cpp  ModeSelector.cpp  NoteDisplayComponent.cpp  StatusIndicatorComponent.cpp  TuningMeterComponent.cpp
tests/: CMakeLists.txt  test_audio_callbacks.cpp
(+3 files in other folders)
